// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContainer component must render properly with the "primary" modifier 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.section
    theme={
      Object {
        "color": [Function],
        "contrast": [Function],
        "fontFamily": [Function],
        "textSetting": [Function],
        "weight": [Function],
      }
    }
  >
    <p>
      Content
    </p>
  </styled.section>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <p>
        Content
      </p>,
      "className": "sc-bdVaJa dVsKIV",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Content",
      },
      "ref": null,
      "rendered": "Content",
      "type": "p",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <p>
          Content
        </p>,
        "className": "sc-bdVaJa dVsKIV",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Content",
        },
        "ref": null,
        "rendered": "Content",
        "type": "p",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`AppContainer component must render properly with the "primary" modifier 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.section
    theme={
      Object {
        "color": [Function],
        "contrast": [Function],
        "fontFamily": [Function],
        "textSetting": [Function],
        "weight": [Function],
      }
    }
    type="primary"
  >
    <p>
      Content
    </p>
  </styled.section>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <p>
        Content
      </p>,
      "className": "sc-bdVaJa dVsKIV",
      "type": "primary",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Content",
      },
      "ref": null,
      "rendered": "Content",
      "type": "p",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <p>
          Content
        </p>,
        "className": "sc-bdVaJa dVsKIV",
        "type": "primary",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Content",
        },
        "ref": null,
        "rendered": "Content",
        "type": "p",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
